syntax = "proto3";

option csharp_namespace = "DeliveryService.Models.Protos";

package DeliveryFiles;

// The Fileservice service definition.
service Fileservice {
  // Creates a specified file and returns it
  rpc GetFile (FileserviceRequest) returns (FileserviceResponse);
}

// Input parameters: session token UID, attachment file type, values for creating the file.
message FileserviceRequest {
  string SessionTokenGuid = 1;
  string AttachmentFileType = 2;
  bytes Values = 3;
}

// Output parameters: session token UID, UID of the created file, file type, byte representation of the file.
message FileserviceResponse {
  string SessionTokenGuid = 1;
  string CreatedFileGuid = 2;
  string AttachmentFileType = 3;
  bytes FileBytes = 4;
  string ExceptionDetails = 5;
}
